recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:29: error: not found: value squareside
squareside(levels-1, length/3)
^